--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ body {
     text-align: left;
 }
 
+.proficiency-container {
+    display: flex;
+    justify-content: space-between;
+    margin: 1em 5em;
+}
+
 .project-container {
     max-width: 60em;
     margin: 0 auto;
@@ -109,7 +115,8 @@ a {
 h1, h2 {
     font-weight: 700;
     font-size: 1.5rem;
-    padding: 0.6em 0em;
+    padding: 1em 0em;
+    text-align: center;
 }
 
 .container a {
@@ -117,7 +124,25 @@ h1, h2 {
 }
 
 .container p {
-    padding: 0.6em 0em;
+    padding: 0.6em;
+    text-align: justify;
+}
+
+/* Proficiency specific */
+
+.proficiency-column {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1em;
+    margin: 0em auto;
+}
+
+
+.proficiency-column p {
+    border: 0.15em solid rgb(59, 59, 59);
+    border-radius: 0.4em;
+    padding: 1em;
 }
 
 /* Project page specific */
