--- a/style.css
+++ b/style.css
@@ -170,11 +170,11 @@ h1, h2 {
 
 .col {
     /* background-color: rgb(59, 59, 59); */
-    background-image: linear-gradient(rgb(48, 48, 48), rgb(128, 128, 128));
+    background-image: linear-gradient(rgb(48, 48, 48), rgb(78, 78, 78));
     margin: 2em 2em;
     min-height:20em;    
-    border: 0.2em solid grey;
-    border-radius: 4px;
+    border: 0.2em solid rgb(78, 78, 78);
+    border-radius: 0.15em;
 }
 
 .col p {
@@ -295,6 +295,22 @@ footer p {
         line-height: 1.25em;
         padding-bottom: 3em;
         margin-top: -1em;
+    }
+
+    .proficiency-container {
+        display: flex;
+        justify-content: space-between;
+        margin: 1em 0.6em;
+    }
+
+    .proficiency-column {
+        gap: 0.3em;
+    }
+
+    .proficiency-column p {
+        padding: 0.6em;
+        font-size: smaller;
+        font-weight: 700;
     }
 }
 
