--- a/style.css
+++ b/style.css
@@ -170,15 +170,16 @@ h1, h2 {
 
 .col {
     /* background-color: rgb(59, 59, 59); */
-    background-image: linear-gradient(rgb(48, 48, 48), rgb(78, 78, 78));
+    /* background-image: linear-gradient(rgb(48, 48, 48), rgb(78, 78, 78)); */
     margin: 2em 2em;
     min-height:20em;    
-    border: 0.2em solid rgb(78, 78, 78);
+    /* border: 0.2em solid rgb(78, 78, 78); */
     border-radius: 0.15em;
 }
 
 .col p {
-    color: white;
+    /* color: white; */
+    color: rgb(59, 59, 59);
 
     font-size: 1.1em;
     line-height: 1.5em;
@@ -197,7 +198,8 @@ h1, h2 {
 
 .col img {
     width: 100%;
-    border-bottom: 0.1em solid grey;
+    /* border-bottom: 0.1em solid grey; */
+    border-radius: 0.5em;
 }
 
 
@@ -291,7 +293,8 @@ footer p {
     }
 
     .col p {
-        color: white;
+        /* color: white; */
+        color:rgb(59, 59, 59);
         line-height: 1.25em;
         padding-bottom: 3em;
         margin-top: -1em;
